--- a/rmf_building_sim_common/package.xml
+++ b/rmf_building_sim_common/package.xml
@@ -22,6 +22,7 @@
   <depend>rmf_door_msgs</depend>
   <depend>rmf_lift_msgs</depend>
   <depend>rmf_building_map_msgs</depend>
+  <depend>rmf_building_sim_msgs</depend>
   <depend>menge_vendor</depend>
 
   <export>
